# game-of-life

./: .gitignore  Makefile  README.md  game-of-life.html  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  deploy.yml  pytest.yml  test.yml
deploy/: index.html
game_of_life/: __main__.py  app.py  display.py  engine.py  library.py  models.py  simple_bitarray.py
tests/: test_simple_bitarray.py
