[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["insolor <2442833+insolor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyxel = "^2.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "game_of_life.app:main"

[tool.poe.tasks]
run.script = "game_of_life.app:main()"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", "ISC001",
    "D",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Don't warn on missing return type annotation in tests
    "PLR2004",  # Don't warn about magic values in tests
]
